--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         /* BANNER */
         .banner{
             height: 700px;
+            padding: 0;
             background: var(--primario);
         }
         
@@ -39,7 +40,6 @@
 
         /* LAYOUT CARDS */
         .imoveis_alugar{
-            height: 800px;
             justify-items: center;
         }
 
@@ -49,7 +49,6 @@
         }
 
         .imoveis_comprar{
-            height: 800px;
             justify-items: center;
             background: var(--primario);
         }
@@ -58,12 +57,34 @@
             color: var(--claro);
         }
 
-        .conteudo{
+        .vantagens .conteudo{
             display: flex;
-            margin: 150px 0;
             gap: 100px;
             justify-content: center;
             align-items: center;
+        }
+
+        .localizacao{
+            background: var(--primario);
+            color: var(--claro);
+            display: grid;
+            grid-template-columns: 700px 700px;
+            grid-template-rows: 100px auto;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .localizacao .titulo_secao{
+            text-align: start;
+            margin: 10px;
+        }
+
+        .localizacao .conteudo_texto{
+            text-align: end;
+        }
+
+        .mapa{
+            grid-column: 1 / 3;
         }
     </style>
 </head>
@@ -188,6 +209,16 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="localizacao">
+            <h2 class="titulo_secao">Onde nos Localizamos</h2>
+
+            <div class="conteudo_texto">
+                <p>Rua Coronel Genuíno, 130 - Centro Histórico, POA</p>
+                <p>+55 (51) 3022-9400</p>
+            </div>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.055351762229!2d-51.22919842355745!3d-30.03526983085264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95197906a9d397f5%3A0x514b4935e97fbf4d!2sUniSenac%20-%20Campus%20Porto%20Alegre%20I!5e0!3m2!1spt-BR!2sbr!4v1751462719047!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
         </section>
     </main>
 </body>
